# fastapi-example2

./: .env.example  .flake8  .gitignore  README-migrations.md  README.md  alembic.ini  gunicorn.conf.py  loggers-debug.json  loggers.json  pyproject.toml  tests_start.sh
app/: main.py  paginate_patch.py  settings.py  types.py  version.py
app/api/dependencies/: __init__.py  accounts.py  filters.py  sso.py
app/api/dependencies/sort/: __init__.py  accounts.py  base.py
app/api/routes/: accounts.py  health.py
app/database/: errors.py  session.py
app/models/: __init__.py  accounts.py  companies.py  users.py
app/schemas/: __init__.py  accounts.py  auth.py
app/schemas/create/: accounts.py
app/schemas/response/: accounts.py
app/services/: accounts.py  auth_service.py
db/: .env.example  Dockerfile  create-db.sh  docker-compose.yml
db/migrations/: env.py
db/migrations/versions/: 20221001_b8984957477d_init.py
tests/: conftest.py
tests/app/routes/: test_health.py  test_metrics.py
tests/app/services/: test_factor_accounts.py
