[tool.poetry]
name = "accounts"
version = "0.1.0"
description = "Accounts service"
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
uvicorn = "^0.18.3"
asyncpg = "^0.26.0"
pydantic = {version = "^1.9.0", extras = ["dotenv"]}
greenlet = "^1.1.2"
starlette-exporter = "^0.14.0"
httpx = "^0.22.0"
fastapi-pagination = "^0.9.3"
gunicorn = "^20.1.0"
fastapi-async-sqlalchemy = "^0.3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.942"
Faker = "^13.3.3"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# mypy global options:
[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["app", "tests"]
ignore_missing_imports = true
disallow_untyped_defs = true

# isort global options:
[tool.isort]
profile = "black"
src_paths = ["app", "tests"]